--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,10 +25,14 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:design:23.1.1'
+    compile 'com.android.support:cardview-v7:23.1.1'
     compile 'org.parceler:parceler-api:1.0.4'
     apt 'org.parceler:parceler:1.0.4'
     compile 'com.google.android.gms:play-services-maps:8.4.0'
     compile 'com.google.android.gms:play-services-location:8.4.0'
     compile 'com.loopj.android:android-async-http:1.4.9'
     compile 'com.jakewharton:butterknife:7.0.1'
+    compile 'com.astuetz:pagerslidingtabstrip:1.0.1'
+    compile 'jp.wasabeef:recyclerview-animators:2.2.0'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
 }
