--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,46 +2,46 @@ apply plugin: 'com.android.application'
 apply plugin: 'com.neenbedankt.android-apt'
 
 android {
-  compileSdkVersion 23
-  buildToolsVersion "23.0.2"
+    compileSdkVersion 23
+    buildToolsVersion "23.0.2"
 
-  defaultConfig {
-    applicationId "org.ahomewithin.ahomewithin"
-    minSdkVersion 16
-    targetSdkVersion 23
-    versionCode 1
-    versionName "1.0"
-  }
-  buildTypes {
-    release {
-      minifyEnabled false
-      proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+    defaultConfig {
+        applicationId "org.ahomewithin.ahomewithin"
+        minSdkVersion 16
+        targetSdkVersion 23
+        versionCode 1
+        versionName "1.0"
     }
-  }
-  packagingOptions {
-    exclude 'META-INF/LICENSE'
-    exclude 'META-INF/LICENSE-FIREBASE.txt'
-    exclude 'META-INF/NOTICE'
-  }
+    buildTypes {
+        release {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+    }
+    packagingOptions {
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE-FIREBASE.txt'
+        exclude 'META-INF/NOTICE'
+    }
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.1.1'
-    compile 'com.android.support:design:23.1.1'
-    compile 'com.android.support:cardview-v7:23.1.1'
-    compile 'org.parceler:parceler-api:1.0.4'
     apt 'org.parceler:parceler:1.0.4'
+    apt 'com.github.hotchemi:permissionsdispatcher-processor:2.0.7'
+    compile 'com.android.support:appcompat-v7:23.2.0'
+    compile 'com.android.support:design:23.2.0'
+    compile 'com.android.support:cardview-v7:23.2.0'
+    compile 'org.parceler:parceler-api:1.0.4'
     compile 'com.google.android.gms:play-services-maps:8.4.0'
     compile 'com.google.android.gms:play-services-location:8.4.0'
     compile 'com.loopj.android:android-async-http:1.4.9'
     compile 'com.github.hotchemi:permissionsdispatcher:2.0.7'
-    apt 'com.github.hotchemi:permissionsdispatcher-processor:2.0.7'
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.astuetz:pagerslidingtabstrip:1.0.1'
     compile 'jp.wasabeef:recyclerview-animators:2.2.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.firebase:firebase-client-android:2.5.2'
-
+    compile 'com.malmstein:fenster:0.0.2'
 }
