--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,4 +44,5 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.firebase:firebase-client-android:2.5.2'
     compile 'com.malmstein:fenster:0.0.2'
+    compile 'com.alexvasilkov:foldable-layout:1.1.0'
 }
