--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,4 +44,9 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.firebase:firebase-client-android:2.5.2'
     compile 'com.malmstein:fenster:0.0.2'
+    compile 'com.parse:parse-android:1.13.0'
+    compile 'com.parse:parseinterceptors:0.0.2' // for logging API calls to LogCat
+    compile 'com.parse.bolts:bolts-android:1.+'
+    compile 'org.mongodb:mongodb-driver-async:3.2.2'
+    compile 'com.google.code.gson:gson:2.6.2'
 }
