--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,7 +42,6 @@ dependencies {
     compile 'com.astuetz:pagerslidingtabstrip:1.0.1'
     compile 'jp.wasabeef:recyclerview-animators:2.2.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
-    compile 'com.firebase:firebase-client-android:2.5.2'
     compile 'com.malmstein:fenster:0.0.2'
     compile 'com.ToxicBakery.viewpager.transforms:view-pager-transforms:1.2.32@aar'
     compile 'com.parse:parse-android:1.13.0'
@@ -50,4 +49,7 @@ dependencies {
     compile 'com.parse.bolts:bolts-android:1.+'
     compile 'org.mongodb:mongodb-driver-async:3.2.2'
     compile 'com.google.code.gson:gson:2.6.2'
+    compile('com.mikepenz:materialdrawer:5.1.2@aar') {
+        transitive = true
+    }
 }
