--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,9 @@ android {
 }
 
 dependencies {
+    repositories {
+        mavenCentral()
+    }
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     apt 'org.parceler:parceler:1.0.4'
@@ -51,4 +54,5 @@ dependencies {
     compile('com.mikepenz:materialdrawer:5.1.2@aar') {
         transitive = true
     }
+    compile 'com.sothree.slidinguppanel:library:3.3.0'
 }
