--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,4 +55,6 @@ dependencies {
         transitive = true
     }
     compile 'com.sothree.slidinguppanel:library:3.3.0'
+    compile 'uk.co.chrisjenx:calligraphy:2.1.0'
+
 }
