--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,7 +42,7 @@ dependencies {
     compile 'com.loopj.android:android-async-http:1.4.9'
     compile 'com.github.hotchemi:permissionsdispatcher:2.0.7'
     compile 'com.jakewharton:butterknife:7.0.1'
-    compile 'com.astuetz:pagerslidingtabstrip:1.0.1'
+    compile 'com.jpardogo.materialtabstrip:library:1.1.0'
     compile 'jp.wasabeef:recyclerview-animators:2.2.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.malmstein:fenster:0.0.2'
